--- a/src/components/Grandpa/Grandpa.css
+++ b/src/components/Grandpa/Grandpa.css
@@ -1,7 +1,7 @@
 .grandpa,
 .grandpa div {
     border: 2px solid goldenrod;
-    margin: 10px;
+    margin: 5px 10px;
     padding: 10px;
     border-radius: 8px;
 }
